...
    <string name="app_name">PunkBeers</string>

    <!-- Beers list -->
    <string name="network_error">Unable to retrieve beers from network</string>
    <string name="list_filter_brewed_after">Brewed after</string>
    <string name="list_filter_brewed_before">Brewed before</string>
    <string name="list_empty">No beers found</string>

    <!-- Beers detail -->

    <!-- Generic placeholders -->
    <string name="placeholder_beertitle">Beer name</string>
    <string name="placeholder_tagline">Lorem ipsum dolor sit amet</string>
    <string name="placeholder_firstbrewed">00/0000</string>
    <string name="placeholder_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tristique consectetur felis vel pretium. Praesent tincidunt vestibulum lacus, molestie rhoncus lacus fermentum vel. Morbi vel pulvinar sapien, sed ultrices arcu. Vivamus gravida nulla vel ex varius, vel consequat dolor tincidunt. Fusce maximus quis mi eget tristique. Aenean sed facilisis libero. 

    <!-- Menu -->
    <string name="action_filter">Filter</string>
</resources>
