...
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <Button
            android:id="@+id/list_filter_since_bt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/list_filter_brewed_after"
            app:drawableLeftCompat="@drawable/ic_firstbrewed"
...
